# old_code

./: README.md
C++_Personal/: 2D_SFML.sln
C++_Personal/2D_SFML/: 2D_SFML.vcxproj  2D_SFML.vcxproj.filters  Application.cpp  StartupConfigurations.json
C++_Personal/2D_SFML/data/: PlayerConfigs.json
C++_Personal/2D_SFML/src/: Core.hpp  Log.cpp  Log.hpp  pch.hpp
C++_Personal/2D_SFML/themes/: TransparentGrey.txt
C++_Personal_2/: main.cpp
C++_Personal_2/headers/: FileWriter.hpp  Planet.hpp  Star.hpp
C++_Personal_2/src/: FileWriter.cpp  Planet.cpp  Star.cpp
C_Tutoring_Code/: cbr.sh  employeePayCalc.c  main
PAH_Inventory/: CMakeLists.txt  CMakePresets.json  TestData.csv
PAH_Inventory/Source/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp  Main.cpp  structs.hpp
Python_Robotics/: Map.py  Node.py  Pathfinding.py  Pizzolatto_Map_Scene.ttt  SLAM.py  aStar.py  dijkstra.py  main.py  pyMain.py  rrtStar.py
SchoolPlanner-Ultralight-SQlite-MSVC/: SchoolPlanner-Ultralight-SQlite-MSVC.sln
SchoolPlanner-Ultralight-SQlite-MSVC/SchoolPlanner-Ultralight-SQlite-MSVC/: SchoolPlanner-Ultralight-SQlite-MSVC.vcxproj  SchoolPlanner-Ultralight-SQlite-MSVC.vcxproj.filters
SchoolPlanner-Ultralight-SQlite-MSVC/SchoolPlanner-Ultralight-SQlite-MSVC/data/: config.json
SchoolPlanner-Ultralight-SQlite-MSVC/SchoolPlanner-Ultralight-SQlite-MSVC/src/: Application.cpp  Application.hpp  EntryMain.cpp  Log.cpp  Log.hpp  sc_pch.cpp  sc_pch.hpp
SchoolPlanner-Ultralight-SQlite-MSVC/bin-int/Debug/: SchoolPlanner.exe.recipe  vc142.idb  vc143.idb
(+59 files in other folders)
